[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gradiologin"
dynamic = ["version"]
description = "OAuth / OpenID Connect login for Gradio apps"
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Jakub Juszko"}]
dependencies = ["gradio >= 4.24", "authlib", "itsdangerous"]
keywords = ["gradio", "login", "oauth", "openid", "oidc", "authorization", "authentication", "auth", "sso"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Security",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.urls]
Homepage = "https://github.com/jakjus/gradiologin"
Repository = "https://github.com/jakjus/gradiologin"
Issues = "https://github.com/jakjus/gradiologin/issues"
Changelog = "https://github.com/jakjus/gradiologin/blob/master/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "gradiologin.__version__"}

[tool.setuptools.packages.find]
include = ["gradiologin*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
